# app.js
@@ -15,11 +15,10 @@ const { HOST } = process.env;
 
 const authRouter = require("./routes/api/auth");
 
-const sellRouter = require('./routes/api/sell');
-const goodHandsRouter = require('./routes/api/goodHands');
-const lostFoundRouter = require('./routes/api/lostFound');
-
-const userRouter = require('./routes/api/userProfile');
+// const sellRouter = require("./routes/api/sell");
+// const goodHandsRouter = require("./routes/api/goodHands");
+// const lostFoundRouter = require("./routes/api/lostFound");
+const userRouter = require("./routes/api/userProfile");
 const newsRouter = require("./routes/api/news");
 const noticesRouter = require("./routes/api/notices");
 
@@ -36,9 +35,9 @@ app.use(express.static("public"))
 // ROUTES:
 app.use("/api/auth", authRouter);
 
-app.use('/sell', sellRouter);
-app.use('/goodHands', goodHandsRouter);
-app.use('/lostFound', lostFoundRouter);
+// app.use("/sell", sellRouter);
+// app.use("/goodHands", goodHandsRouter);
+// app.use("/lostFound", lostFoundRouter);
 
 app.use("/api/userprofile", userRouter);
 app.use("/api/news", newsRouter);
