# swagger_output.json
@@ -1,13 +1,16 @@
 {
   "openapi": "3.0.0",
   "info": {
-    "version": "1.0.0",
-    "title": "REST API",
-    "description": ""
+    "version": "1.0.1",
+    "title": "REST API for Petly-project",
+    "description": "Back-end endpoints for Petly-project"
   },
   "servers": [
     {
-      "url": "http://localhost:3001"
+      "url": "https://petly-server.onrender.com"
+    },
+    {
+      "url": "http://localhost:3001/"
     }
   ],
   "consumes": ["application/json", "multipart/form-data"],
@@ -78,7 +81,7 @@
         "description": "User log-in",
         "parameters": [],
         "responses": {
-          "201": {
+          "200": {
             "description": "Successful operation",
             "content": {
               "application/json": {
@@ -112,7 +115,8 @@
     "/api/auth/current": {
       "get": {
         "tags": ["Auth"],
-        "description": "",
+        "description": "Get user info",
+        "security": [{ "Bearer": [] }],
         "parameters": [
           {
             "name": "authorization",
@@ -142,7 +146,7 @@
     "/api/auth/logout": {
       "get": {
         "tags": ["Auth"],
-        "description": "",
+        "description": "Logout user",
         "security": [{ "Bearer": [] }],
         "parameters": [
           {
@@ -163,172 +167,51 @@
         }
       }
     },
-    "/sell": {
-      "post": {
-        "description": "Add notice for sell",
-        "parameters": [],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        },
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "object",
-                "properties": {
-                  "title": {
-                    "example": "any"
-                  },
-                  "name": {
-                    "example": "any"
-                  },
-                  "breed": {
-                    "example": "any"
-                  },
-                  "place": {
-                    "example": "any"
-                  },
-                  "price": {
-                    "example": "any"
-                  },
-                  "comments": {
-                    "example": "any"
-                  }
-                }
-              }
+    "/api/auth/update": {
+      "put": {
+        "description": "Change user info",
+        "security": [{ "Bearer": [] }],
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "schema": {
+              "type": "string"
             }
           }
-        }
-      },
-      "get": {
-        "description": "",
-        "parameters": [],
+        ],
         "responses": {
           "200": {
             "description": "OK"
-          },
-          "404": {
-            "description": "Not Found"
           }
         }
       }
     },
-    "/goodHands": {
-      "post": {
+    "/api/auth/avatar": {
+      "patch": {
         "description": "",
-        "parameters": [],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        },
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "object",
-                "properties": {
-                  "title": {
-                    "example": "any"
-                  },
-                  "name": {
-                    "example": "any"
-                  },
-                  "breed": {
-                    "example": "any"
-                  },
-                  "place": {
-                    "example": "any"
-                  },
-                  "dateOfBirth": {
-                    "example": "any"
-                  },
-                  "comments": {
-                    "example": "any"
-                  },
-                  "sex": {
-                    "example": "any"
-                  }
-                }
-              }
+        "security": [{ "Bearer": [] }],
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "schema": {
+              "type": "string"
             }
           }
-        }
-      },
-      "get": {
-        "description": "",
-        "parameters": [],
+        ],
         "responses": {
           "200": {
             "description": "OK"
-          },
-          "404": {
-            "description": "Not Found"
           }
         }
       }
     },
-    "/lostFound": {
-      "post": {
-        "description": "",
-        "parameters": [],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        },
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "object",
-                "properties": {
-                  "title": {
-                    "example": "any"
-                  },
-                  "name": {
-                    "example": "any"
-                  },
-                  "breed": {
-                    "example": "any"
-                  },
-                  "place": {
-                    "example": "any"
-                  },
-                  "dateOfBirth": {
-                    "example": "any"
-                  },
-                  "comments": {
-                    "example": "any"
-                  },
-                  "sex": {
-                    "example": "any"
-                  }
-                }
-              }
-            }
-          }
-        }
-      },
-      "get": {
-        "description": "",
-        "parameters": [],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "404": {
-            "description": "Not Found"
-          }
-        }
-      }
-    },
-    "/api/userprofile": {
+    "/api/userprofile/": {
       "get": {
         "tags": ["User info and user`s pets"],
         "description": "Get user info and user`s pets",
+        "security": [{ "Bearer": [] }],
         "parameters": [
           {
             "name": "authorization",
@@ -445,46 +328,6 @@
         }
       }
     },
-    "/api/userprofile/avatar": {
-      "patch": {
-        "tags": ["User info and user`s pets"],
-        "description": "",
-        "parameters": [
-          {
-            "name": "authorization",
-            "in": "header",
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "requestBody": {
-          "description": "Update user's avatar",
-          "content": {
-            "multipart/form-data": {
-              "schema": {
-                "$ref": "#/components/schemas/UpdateAvatarRequest"
-              }
-            }
-          }
-        },
-        "responses": {
-          "200": {
-            "description": "OK",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/UpdateUserAvatarResponse"
-                }
-              }
-            }
-          },
-          "401": {
-            "description": "Not authorized"
-          }
-        }
-      }
-    },
     "/api/news/": {
       "get": {
         "tags": ["News"],
@@ -539,6 +382,99 @@
         }
       }
     },
+    "/api/notices/paginateNotice": {
+      "get": {
+        "description": "",
+        "parameters": [],
+        "responses": {}
+      }
+    },
+    "/api/notices/searchOneTitle": {
+      "get": {
+        "description": "",
+        "parameters": [],
+        "responses": {}
+      }
+    },
+    "/api/notices/searchManyTitles": {
+      "get": {
+        "description": "",
+        "parameters": [],
+        "responses": {}
+      }
+    },
+    "/api/notices/{noticeId}": {
+      "get": {
+        "description": "",
+        "parameters": [],
+        "responses": {}
+      }
+    },
+    "/api/notices/{noticeId}/favorite": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "noticeId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {}
+      },
+      "patch": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "noticeId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {}
+      },
+      "delete": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "noticeId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {}
+      }
+    },
     "/api/notices/{id}": {
       "delete": {
         "description": "",
@@ -562,24 +498,18 @@
         "responses": {}
       }
     },
-    "/api/notices/paginateNotice": {
-      "get": {
+    "/api/notices/": {
+      "post": {
         "description": "",
-        "parameters": [],
-        "responses": {}
-      }
-    },
-    "/api/notices/searchOneTitle": {
-      "get": {
-        "description": "",
-        "parameters": [],
-        "responses": {}
-      }
-    },
-    "/api/notices/searchManyTitles": {
-      "get": {
-        "description": "",
-        "parameters": [],
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
         "responses": {}
       }
     },
